--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       <h1>Welcome to My Presentation</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div>
-        <a href="#page-2" class="btn">Next Page</a>
-        <i class="fas fa-arrow-circle-down"></i>
+        <a href="#page-2" class="btn">Next Page <i class="fas fa-arrow-circle-down"></i></a>
       </div>
     </section>
 
@@ -23,11 +22,9 @@
       <h1>Welcome to My Presentation</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div>
-        <a href="#page-1" class="btn btn-dark">Previous Page</a>
-        <i class="fas fa-arrow-circle-up"></i>
+        <a href="#page-1" class="btn btn-dark">Previous Page <i class="fas fa-arrow-circle-up"></i></a>
+        <a href="#page-3" class="btn">Next Page <i class="fas fa-arrow-circle-down"></i></a>
 
-        <a href="#page-3" class="btn">Next Page</a>
-        <i class="fas fa-arrow-circle-down"></i>
       </div>
     </section>
 
@@ -36,23 +33,45 @@
       <h1>Welcome to My Presentation</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div>
-        <a href="#page-2" class="btn btn-dark">Previous Page</a>
-        <i class="fas fa-arrow-circle-up"></i>
+        <a href="#page-2" class="btn btn-dark">Previous Page <i class="fas fa-arrow-circle-up"></i></a>
+        <a href="#page-4" class="btn">Next Page <i class="fas fa-arrow-circle-down"></i></a>
 
-        <a href="#page-4" class="btn">Next Page</a>
-        <i class="fas fa-arrow-circle-down"></i>
       </div>
     </section>
 
     <!-- page 4 -->
-    <section id="page-3" class="page">
+    <section id="page-4" class="page">
       <h1>Welcome to My Presentation</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div>
-        <a href="#page-3" class="btn">Previous Page</a>
-        <i class="fas fa-arrow-circle-up"></i>
-
+        <a href="#page-3" class="btn">Previous Page <i class="fas fa-arrow-circle-up"></i></a>
       </div>
     </section>
   </body>
+
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+
+  <script>
+
+$('.btn').on('click', function(event) {
+  if (this.hash !== '') {
+    event.preventDefault();
+
+    const hash = this.hash;
+
+    $('html, body').animate(
+      {
+        scrollTop: $(hash).offset().top
+      },
+      800
+    );
+  }
+});
+
+  </script>
+
+
 </html>
